--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -476,12 +476,14 @@ footer a.footer-link {
 a.document-link {
     display: block;
     margin: 24px 0;
-    padding-left: 40px;
+    padding-left: 66px;
+    padding-top: 8px;
     position: relative;
+    min-height: 60px;
 }
 
 a.document-link img {
-    width: 32px;
+    width: 50px;
     position: absolute;
     left: 0;
 }
@@ -636,6 +638,14 @@ blockquote {
         position: absolute;
         top: -10px;
         right: -5px;
+    }
+    
+    .measure {
+        display: block;
+    }
+    
+    .display-table thead th {
+        font-size: 80%;
     }
 }
 
